# long_reference_speedcheck

./: .gitignore  Cargo.toml  README.md  speedcheck_local.sh  speedcheck_only_dyss.sh
result_local/: baseline_sakoechiba_with_chunking.csv  baseline_scouting_with_chunking.csv  baseline_sub_with_chunking.csv  baseline_sub_without_chunking.csv  baseline_sub_wo_chunking_refsize_varies.csv  beseline_sub_wo_chunking_refsize_varies.csv  proposed.csv  proposed_refsize_varies.csv  proposed_refsize_varies.csv~  refsize_varies.csv
src/: lib.rs  scorepath.R  speedcheck.R
