[package]
name = "long_reference_speedcheck"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"
[dependencies]
dtw = {path = "../dtw"}
squiggler = {path = "../squiggler"}
bio = "*"
rand = "*"
rayon = "*"
csv = "1.0.0-beta.5"
histogram_minimizer = {path ="../histogram_minimizer"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
